# chat-api/gen/chatapi/endpoints.go
@@ -16,7 +16,8 @@ import (
 
 // Endpoints wraps the "chatapi" service endpoints.
 type Endpoints struct {
-	Getchat goa.Endpoint
+	Getchat  goa.Endpoint
+	Postchat goa.Endpoint
 }
 
 // NewEndpoints wraps the methods of the "chatapi" service with endpoints.
@@ -24,13 +25,15 @@ func NewEndpoints(s Service) *Endpoints {
 	// Casting service to Auther interface
 	a := s.(Auther)
 	return &Endpoints{
-		Getchat: NewGetchatEndpoint(s, a.APIKeyAuth),
+		Getchat:  NewGetchatEndpoint(s, a.APIKeyAuth),
+		Postchat: NewPostchatEndpoint(s, a.APIKeyAuth),
 	}
 }
 
 // Use applies the given middleware to all the "chatapi" service endpoints.
 func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 	e.Getchat = m(e.Getchat)
+	e.Postchat = m(e.Postchat)
 }
 
 // NewGetchatEndpoint returns an endpoint function that calls the method
@@ -54,5 +57,24 @@ func NewGetchatEndpoint(s Service, authAPIKeyFn security.AuthAPIKeyFunc) goa.End
 		}
 		vres := NewViewedGoaChatCollection(res, "default")
 		return vres, nil
+	}
+}
+
+// NewPostchatEndpoint returns an endpoint function that calls the method
+// "postchat" of service "chatapi".
+func NewPostchatEndpoint(s Service, authAPIKeyFn security.AuthAPIKeyFunc) goa.Endpoint {
+	return func(ctx context.Context, req interface{}) (interface{}, error) {
+		p := req.(*PostchatPayload)
+		var err error
+		sc := security.APIKeyScheme{
+			Name:           "api_key",
+			Scopes:         []string{},
+			RequiredScopes: []string{},
+		}
+		ctx, err = authAPIKeyFn(ctx, p.Key, &sc)
+		if err != nil {
+			return nil, err
+		}
+		return s.Postchat(ctx, p)
 	}
 }
