# chat-api/gen/http/chatapi/server/server.go
@@ -19,9 +19,10 @@ import (
 
 // Server lists the chatapi service endpoint HTTP handlers.
 type Server struct {
-	Mounts  []*MountPoint
-	Getchat http.Handler
-	CORS    http.Handler
+	Mounts   []*MountPoint
+	Getchat  http.Handler
+	Postchat http.Handler
+	CORS     http.Handler
 }
 
 // ErrorNamer is an interface implemented by generated error structs that
@@ -58,10 +59,13 @@ func New(
 	return &Server{
 		Mounts: []*MountPoint{
 			{"Getchat", "GET", "/chatroom/{id}"},
+			{"Postchat", "POST", "/chatroom/chat"},
 			{"CORS", "OPTIONS", "/chatroom/{id}"},
+			{"CORS", "OPTIONS", "/chatroom/chat"},
 		},
-		Getchat: NewGetchatHandler(e.Getchat, mux, decoder, encoder, errhandler, formatter),
-		CORS:    NewCORSHandler(),
+		Getchat:  NewGetchatHandler(e.Getchat, mux, decoder, encoder, errhandler, formatter),
+		Postchat: NewPostchatHandler(e.Postchat, mux, decoder, encoder, errhandler, formatter),
+		CORS:     NewCORSHandler(),
 	}
 }
 
@@ -71,12 +75,14 @@ func (s *Server) Service() string { return "chatapi" }
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.Getchat = m(s.Getchat)
+	s.Postchat = m(s.Postchat)
 	s.CORS = m(s.CORS)
 }
 
 // Mount configures the mux to serve the chatapi endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountGetchatHandler(mux, h.Getchat)
+	MountPostchatHandler(mux, h.Postchat)
 	MountCORSHandler(mux, h.CORS)
 }
 
@@ -131,6 +137,57 @@ func NewGetchatHandler(
 	})
 }
 
+// MountPostchatHandler configures the mux to serve the "chatapi" service
+// "postchat" endpoint.
+func MountPostchatHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := HandleChatapiOrigin(h).(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/chatroom/chat", f)
+}
+
+// NewPostchatHandler creates a HTTP handler which loads the HTTP request and
+// calls the "chatapi" service "postchat" endpoint.
+func NewPostchatHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodePostchatRequest(mux, decoder)
+		encodeResponse = EncodePostchatResponse(encoder)
+		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "postchat")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "chatapi")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
 // MountCORSHandler configures the mux to serve the CORS endpoints for the
 // service chatapi.
 func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
@@ -142,6 +199,7 @@ func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
 		}
 	}
 	mux.Handle("OPTIONS", "/chatroom/{id}", f)
+	mux.Handle("OPTIONS", "/chatroom/chat", f)
 }
 
 // NewCORSHandler creates a HTTP handler which returns a simple 200 response.
@@ -169,7 +227,7 @@ func HandleChatapiOrigin(h http.Handler) http.Handler {
 			if acrm := r.Header.Get("Access-Control-Request-Method"); acrm != "" {
 				// We are handling a preflight request
 				w.Header().Set("Access-Control-Allow-Methods", "GET")
-				w.Header().Set("Access-Control-Allow-Headers", "Access-Control-Allow-Origin, Authorization")
+				w.Header().Set("Access-Control-Allow-Headers", "Access-Control-Allow-Origin, Authorization, application/x-www-form-urlencoded")
 			}
 			origHndlr(w, r)
 			return
