# chat-api/gen/http/openapi3.yaml
@@ -20,9 +20,9 @@ paths:
         schema:
           type: integer
           description: room id
-          example: 7331539213984418867
+          example: 4296689097314459712
           format: int64
-        example: 2589955657104534163
+        example: 6981397293335728417
       responses:
         "200":
           description: OK response.
@@ -57,6 +57,37 @@ paths:
                 UserId: Rem voluptates nam voluptatem rerum rerum neque.
       security:
       - api_key_header_Authorization: []
+  /chatroom/chat:
+    post:
+      tags:
+      - chatapi
+      summary: postchat chatapi
+      operationId: chatapi#postchat
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostchatRequestBody'
+            example:
+              Chat: Quia omnis aut doloribus reiciendis.
+              Cookie: Aut accusamus aut voluptas dicta totam.
+              Id: Quis repudiandae perferendis ut.
+              Member: Est est aut doloremque quo nulla.
+              PostDt: "1974-10-21T19:40:05Z"
+              RoomName: Odio recusandae atque ut.
+              UserId: Neque nostrum et magni eos enim.
+      responses:
+        "200":
+          description: OK response.
+          content:
+            application/json:
+              schema:
+                type: boolean
+                example: false
+              example: true
+      security:
+      - api_key_header_Authorization: []
 components:
   schemas:
     GoaChat:
@@ -65,36 +96,36 @@ components:
         Chat:
           type: string
           description: chat
-          example: Voluptas dicta totam.
+          example: Soluta iste.
         Id:
           type: integer
           description: room id
-          example: 3084490717507266567
+          example: 6922129475788002348
           format: int64
         Member:
           type: string
           description: member
-          example: Reiciendis delectus iusto sit aut accusamus.
+          example: Iure suscipit assumenda eum.
         PostDt:
           type: string
-          example: "1989-04-17T01:01:42Z"
+          example: "1982-08-12T07:15:20Z"
           format: date-time
         RoomName:
           type: string
           description: room name
-          example: Molestias dolorem soluta quo itaque.
+          example: Eos quia alias sequi sit tenetur molestias.
         UserId:
           type: string
           description: user id
-          example: Natus fuga laboriosam error inventore.
+          example: Et voluptatibus et doloribus.
       description: All chat
       example:
-        Chat: Soluta eius aut quidem dolorum in aspernatur.
-        Id: 6638991917400390848
-        Member: Rerum aut iusto.
-        PostDt: "1998-04-05T09:47:38Z"
-        RoomName: Aperiam numquam quibusdam dolor quasi impedit.
-        UserId: Debitis et.
+        Chat: Illum ipsa ut error cum.
+        Id: 6998534079444475763
+        Member: Nesciunt velit a.
+        PostDt: "2011-10-23T05:55:47Z"
+        RoomName: Itaque impedit.
+        UserId: Quia animi necessitatibus voluptas.
       required:
       - Id
       - UserId
@@ -125,6 +156,59 @@ components:
         PostDt: "1985-11-21T12:48:29Z"
         RoomName: Eveniet voluptas quod qui.
         UserId: Rem voluptates nam voluptatem rerum rerum neque.
+      - Chat: Aut numquam similique.
+        Id: 5625972352155160976
+        Member: Nihil debitis magnam dolorem qui praesentium iure.
+        PostDt: "1985-11-21T12:48:29Z"
+        RoomName: Eveniet voluptas quod qui.
+        UserId: Rem voluptates nam voluptatem rerum rerum neque.
+    PostchatRequestBody:
+      type: object
+      properties:
+        Chat:
+          type: string
+          description: chat
+          example: Ut at.
+        Cookie:
+          type: string
+          description: cookie
+          example: Incidunt est sit voluptatem explicabo officia.
+        Id:
+          type: string
+          description: room id
+          example: Voluptatem sit iusto consectetur amet.
+        Member:
+          type: string
+          description: member
+          example: Enim architecto voluptates.
+        PostDt:
+          type: string
+          example: "2014-02-17T23:40:11Z"
+          format: date-time
+        RoomName:
+          type: string
+          description: room name
+          example: Non autem provident veniam animi consequatur iste.
+        UserId:
+          type: string
+          description: user id
+          example: Aut fugit.
+      example:
+        Chat: Iusto consequuntur doloremque praesentium perspiciatis enim.
+        Cookie: Blanditiis ullam laboriosam exercitationem mollitia molestiae pariatur.
+        Id: At unde distinctio quis quisquam ullam voluptatibus.
+        Member: Pariatur rerum nobis animi incidunt harum corrupti.
+        PostDt: "2001-04-17T15:42:04Z"
+        RoomName: Ratione similique ullam.
+        UserId: Velit accusamus odio.
+      required:
+      - Id
+      - UserId
+      - RoomName
+      - Member
+      - Chat
+      - PostDt
+      - Cookie
   securitySchemes:
     api_key_header_Authorization:
       type: apiKey
